--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 14:05:09 2018</p>
+         Last Run: Wed Nov 14 15:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>2</td>
-                        <td>-2</td>
-                        <td>5</td>
+                        <td>-3</td>
+                        <td>4</td>
                         <td>69</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>19</td>
                         <td>NW</td>
-                        <td>26</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>Partly Cloudy</td>
+                        <td>1</td>
+                        <td>-3</td>
                         <td>5</td>
-                        <td>72</td>
+                        <td>74</td>
                         <td>0</td>
-                        <td>18</td>
+                        <td>16</td>
                         <td>NW</td>
-                        <td>26</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>75</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>24</td>
+                        <td>27</td>
                      </tr>
                   </tbody>
                </table>
@@ -89,8 +89,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
-                 "-2",
+                 "-3",
+                 "-3",
                  "-3"
                ]
              },
@@ -102,7 +102,7 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "2",
-                 "2",
+                 "1",
                  "1"
                ]
              }
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "4",
                  "5",
-                 "5",
-                 "5"
+                 "6"
                ]
              },
              {
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "69",
-                 "72",
+                 "74",
                  "75"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "26",
-                 "26",
-                 "24"
+                 "31",
+                 "31",
+                 "27"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 14:05:09 2018</p>
+         Last Run: Wed Nov 14 15:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>5</td>
-                        <td>90</td>
+                        <td>91</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -273,7 +273,7 @@
                         <td>-8</td>
                         <td>-13</td>
                         <td>3</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -282,10 +282,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-6</td>
-                        <td>-10</td>
+                        <td>-5</td>
+                        <td>-9</td>
                         <td>2</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
@@ -320,7 +320,7 @@
                  "-18",
                  "-14",
                  "-13",
-                 "-10"
+                 "-9"
                ]
              },
              {
@@ -333,7 +333,7 @@
                  "-13",
                  "-10",
                  "-8",
-                 "-6"
+                 "-5"
                ]
              }
            ]
@@ -403,10 +403,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "90",
+                 "91",
                  "82",
-                 "77",
-                 "71"
+                 "76",
+                 "70"
                ]
              },
              {
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 14:05:09 2018</p>
+         Last Run: Wed Nov 14 15:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -673,7 +673,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 14:05:09 2018</p>
+         Last Run: Wed Nov 14 15:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
