--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 15:05:13 2018</p>
+         Last Run: Wed Nov 14 16:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 14, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Partly Cloudy</td>
                         <td>2</td>
                         <td>-3</td>
-                        <td>4</td>
+                        <td>2</td>
                         <td>69</td>
                         <td>0</td>
                         <td>19</td>
@@ -45,7 +45,7 @@
                         <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>74</td>
                         <td>0</td>
                         <td>16</td>
@@ -54,15 +54,15 @@
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>1</td>
                         <td>-3</td>
-                        <td>6</td>
+                        <td>4</td>
                         <td>75</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WNW</td>
-                        <td>27</td>
+                        <td>30</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "2",
                  "4",
-                 "5",
-                 "6"
+                 "4"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "31",
                  "31",
-                 "27"
+                 "30"
                ]
              }
            ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 15:05:13 2018</p>
+         Last Run: Wed Nov 14 16:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -249,7 +250,7 @@
                         <td>-13</td>
                         <td>-18</td>
                         <td>5</td>
-                        <td>91</td>
+                        <td>90</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -270,26 +271,26 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>-8</td>
-                        <td>-13</td>
+                        <td>-7</td>
+                        <td>-11</td>
                         <td>3</td>
-                        <td>76</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>WSW</td>
-                        <td>0</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>-5</td>
-                        <td>-9</td>
+                        <td>-4</td>
+                        <td>-7</td>
                         <td>2</td>
-                        <td>70</td>
+                        <td>63</td>
                         <td>1</td>
                         <td>8</td>
                         <td>WSW</td>
-                        <td>0</td>
+                        <td>1</td>
                      </tr>
                   </tbody>
                </table>
@@ -319,8 +320,8 @@
                "data":[
                  "-18",
                  "-14",
-                 "-13",
-                 "-9"
+                 "-11",
+                 "-7"
                ]
              },
              {
@@ -332,8 +333,8 @@
                "data":[
                  "-13",
                  "-10",
-                 "-8",
-                 "-5"
+                 "-7",
+                 "-4"
                ]
              }
            ]
@@ -403,10 +404,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "91",
+                 "90",
                  "82",
-                 "76",
-                 "70"
+                 "73",
+                 "63"
                ]
              },
              {
@@ -417,8 +418,8 @@
                "data":[
                  "0",
                  "0",
-                 "0",
-                 "0"
+                 "1",
+                 "1"
                ]
              }
            ]
@@ -458,7 +459,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 15:05:13 2018</p>
+         Last Run: Wed Nov 14 16:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -483,7 +484,7 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>1</td>
-                        <td>57</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>11</td>
                         <td>W</td>
@@ -495,7 +496,7 @@
                         <td>2</td>
                         <td>-2</td>
                         <td>2</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
@@ -507,7 +508,7 @@
                         <td>3</td>
                         <td>0</td>
                         <td>2</td>
-                        <td>49</td>
+                        <td>48</td>
                         <td>1</td>
                         <td>13</td>
                         <td>W</td>
@@ -620,9 +621,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "52",
-                 "49"
+                 "56",
+                 "51",
+                 "48"
                ]
              },
              {
@@ -673,7 +674,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 14 15:05:13 2018</p>
+         Last Run: Wed Nov 14 16:05:13 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -714,7 +715,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>43</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -722,7 +723,7 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>2</td>
-                        <td>71</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -837,7 +838,7 @@
                "data":[
                  "69",
                  "70",
-                 "71"
+                 "70"
                ]
              },
              {
@@ -847,7 +848,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "46",
-                 "43",
+                 "42",
                  "39"
                ]
              }
