--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 01:05:11 2018</p>
+         Last Run: Thu Nov 15 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. SWU Premiers - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 17, 2018 -  9:30AM til 10:30AM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>-12</td>
                         <td>-17</td>
                         <td>4</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SW</td>
@@ -44,11 +44,11 @@
                         <td>09:00 AM</td>
                         <td>Clear</td>
                         <td>-10</td>
-                        <td>-14</td>
+                        <td>-15</td>
                         <td>3</td>
-                        <td>77</td>
+                        <td>78</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WSW</td>
                         <td>2</td>
                      </tr>
@@ -58,11 +58,11 @@
                         <td>-6</td>
                         <td>-10</td>
                         <td>2</td>
-                        <td>63</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>2</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -70,7 +70,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WSW</td>
@@ -103,7 +103,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-17",
-                 "-14",
+                 "-15",
                  "-10",
                  "-7"
                ]
@@ -188,10 +188,10 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "87",
-                 "77",
-                 "63",
-                 "53"
+                 "88",
+                 "78",
+                 "64",
+                 "54"
                ]
              },
              {
@@ -202,7 +202,7 @@
                "data":[
                  "2",
                  "2",
-                 "2",
+                 "3",
                  "4"
                ]
              }
@@ -243,7 +243,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 01:05:11 2018</p>
+         Last Run: Thu Nov 15 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 18, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -264,39 +264,39 @@
                   <tbody>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>2</td>
-                        <td>-2</td>
+                        <td>Overcast</td>
+                        <td>3</td>
+                        <td>0</td>
                         <td>1</td>
-                        <td>57</td>
-                        <td>1</td>
-                        <td>14</td>
+                        <td>51</td>
+                        <td>0</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>58</td>
+                        <td>88</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>4</td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>52</td>
-                        <td>1</td>
-                        <td>16</td>
-                        <td>W</td>
-                        <td>53</td>
-                     </tr>
-                     <tr>
-                        <td>02:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Overcast</td>
                         <td>5</td>
                         <td>2</td>
                         <td>1</td>
-                        <td>49</td>
+                        <td>46</td>
                         <td>1</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>49</td>
+                        <td>83</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Mostly Cloudy</td>
+                        <td>6</td>
+                        <td>3</td>
+                        <td>1</td>
+                        <td>44</td>
+                        <td>0</td>
+                        <td>14</td>
+                        <td>W</td>
+                        <td>79</td>
                      </tr>
                   </tbody>
                </table>
@@ -323,9 +323,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
                  "0",
-                 "2"
+                 "2",
+                 "3"
                ]
              },
              {
@@ -335,9 +335,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "2",
-                 "4",
-                 "5"
+                 "3",
+                 "5",
+                 "6"
                ]
              }
            ]
@@ -405,9 +405,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "57",
-                 "52",
-                 "49"
+                 "51",
+                 "46",
+                 "44"
                ]
              },
              {
@@ -416,9 +416,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "58",
-                 "53",
-                 "49"
+                 "88",
+                 "83",
+                 "79"
                ]
              }
            ]
@@ -458,7 +458,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov 15 01:05:11 2018</p>
+         Last Run: Thu Nov 15 02:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Nov 19, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -480,14 +480,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-2</td>
-                        <td>-6</td>
+                        <td>-1</td>
+                        <td>-5</td>
                         <td>1</td>
-                        <td>72</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>49</td>
+                        <td>47</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -495,23 +495,23 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>1</td>
-                        <td>74</td>
-                        <td>0</td>
-                        <td>11</td>
-                        <td>WSW</td>
-                        <td>45</td>
-                     </tr>
-                     <tr>
-                        <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-3</td>
-                        <td>-7</td>
-                        <td>1</td>
-                        <td>76</td>
+                        <td>71</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
                         <td>42</td>
+                     </tr>
+                     <tr>
+                        <td>11:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>-2</td>
+                        <td>-6</td>
+                        <td>1</td>
+                        <td>73</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>WSW</td>
+                        <td>38</td>
                      </tr>
                   </tbody>
                </table>
@@ -538,9 +538,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-5",
                  "-6",
-                 "-6",
-                 "-7"
+                 "-6"
                ]
              },
              {
@@ -550,9 +550,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
+                 "-1",
                  "-2",
-                 "-2",
-                 "-3"
+                 "-2"
                ]
              }
            ]
@@ -620,9 +620,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "72",
-                 "74",
-                 "76"
+                 "70",
+                 "71",
+                 "73"
                ]
              },
              {
@@ -631,9 +631,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "45",
-                 "42"
+                 "47",
+                 "42",
+                 "38"
                ]
              }
            ]
